force-app/trigger/default/objects/zak_TriggerHandler__mdt/zak_TriggerHandler__mdt.object-meta.xml
<CustomObject>
    <description>Defines trigger handlers per SObject and sequence of execution.</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>