force-app/trigger/default/objects/zak_TriggerHandler__mdt/fields/HandlerClass__c.field-meta.xml
<CustomField>
    <fullName>HandlerClass__c</fullName>
    <description>The fully qualified name of the class. Namespaces and nested classes are supported, for example, MyNamespace.ClassName.NestedClass.</description>
    <label>Handler Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>