force-app/trigger/default/objects/zak_TriggerHandler__mdt/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <description>Developer name of the record type applicable for this handler. Leave empty to handle all record types.</description>
    <label>Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>