force-app/trigger/default/objects/zak_TriggerHandler__mdt/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <description>Defines sequence of execution of the handlers per SObject.</description>
    <label>Sequence Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>