force-app/trigger/default/objects/zak_TriggerHandler__mdt/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <description>Technical API name of the SObject. Entity relationship not used as not all triggerable objects are available via entity relationship.</description>
    <label>SObject</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>